Fixed body width on mobiles third time

--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,7 @@
 body {
-    max-width: 100vw;
+    max-width: 100%;
+    
+/*     overflow: hidden; */
 }
 
 header {
@@ -43,8 +45,6 @@ header > .title {
 }
 
 header > .topnav {
-    height: auto;
-    grid-area: nav;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -52,16 +52,21 @@ header > .topnav {
     margin: 0;
     align-content: center;
     padding: 0;
+    height: auto;
+    grid-area: nav;
 /*     transition: 1s; */
+/*     display: none; */
 }
 
 header > .topnav > li {
+    display: flex;
     border-style: solid;
     border-color: #74493b;
     border-radius: .3em;
     padding: 0 .5em;
     margin-right: .2em;
-    display: flex;
+    
+/*     display: none; */
 }
 
 header > .topnav > li > a {
@@ -87,6 +92,10 @@ header > .topnav > li > a:hover::after {
     transform: rotateY(0);
 }
 
+#menu-wrapper {
+    display: none;
+}
+
 #menu-trigger {
     display: none;
 }
@@ -97,7 +106,8 @@ header > .topnav > li > a:hover::after {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 64px;
+    width: 4em;
+    height: 4em;
     margin: 0;
     cursor: pointer;
 }
@@ -119,22 +129,31 @@ header > .topnav > li > a:hover::after {
             "line line line";
     }
     header > .icon {
-        height: 4em;
-        width: 4em;
+        height: 3em;
+        width: 3em;
         margin: .5em;
     }
     header > .title {
         grid-area: title;
-        font-size: 300%;
+        font-size: 200%;
         margin-top: .25em;
     }
 
+    #menu-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
     #burger {
         grid-area: button;
         margin: .5em;
+        height: 3em;
+        width: 3em;
     }
     #burger > span {
         display: block;
+        width: 3em;
+        height: .5em;
     }
     header > .topnav {
         position: absolute;
