--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
         "footer footer footer";
     background: var(--back-color);
     margin: 0;
+    width: 100em;
 }
 
 header {
